feat(wildfly): upgrade to WildFly 10 (#68)
* feat(wildfly): upgrade to WildFly 10

* fix(typo): rename wildfly to WildFly in human readable places

Closes [BS-15922](https://bonitasoft.atlassian.net/browse/BS-15922)

* put system properties back to standalone.xml for cargo launcher to have them

* fix indentation